--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d2ac021",
+   "id": "ae5289a1",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "90bac321",
+   "id": "6323ee80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "16990e17",
+   "id": "9070b0d6",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18de71ca",
+   "id": "fd4bdaa4",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e245eebe",
+   "id": "483d1b17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8a869e0c",
+   "id": "ee18f82b",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "61d8e625",
+   "id": "99979920",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae22c8ff",
+   "id": "8b1f166d",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b4135a4",
+   "id": "51032c6a",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8bc8daf1",
+   "id": "22e9a51e",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ae4779af",
+   "id": "149bba9b",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f702ac",
+   "id": "675021fd",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8f330da2",
+   "id": "00490a86",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "86c67f51",
+   "id": "9e6aa607",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d09fffee",
+   "id": "b915d0b2",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d7cee99c",
+   "id": "5e1eb865",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b9cc496",
+   "id": "eaccf48b",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6f2d1b82",
+   "id": "5ea32cd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a6f9fe8e",
+   "id": "e1b8a043",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "558b5f69",
+   "id": "05e0f5d8",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9466a3cf",
+   "id": "a6dc7908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fa2d2ab6",
+   "id": "4d43f205",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1a1956e1",
+   "id": "0296f485",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "414f674f",
+   "id": "b34724df",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884ac515",
+   "id": "092ce9cb",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1c99de8c",
+   "id": "7d6f7bc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "51110ad2",
+   "id": "01fadd5f",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6f586abb",
+   "id": "89b0b58c",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "938d3d1e",
+   "id": "483d1085",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d4b7fff2",
+   "id": "85735f1e",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19bc90fd",
+   "id": "2f46cfbd",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a779c037",
+   "id": "590bf5c8",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "890ecfa4",
+   "id": "2fbc3004",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3829bd2d",
+   "id": "a4c25266",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8db2baa",
+   "id": "c081db91",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a26bafdd",
+   "id": "5732efaf",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d71984e",
+   "id": "534d795c",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9a5dbc67",
+   "id": "5decaabf",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0939f932",
+   "id": "4d428125",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fef410e7",
+   "id": "465749d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6d346df2",
+   "id": "acd53531",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f7b1eeed",
+   "id": "6a4b08a7",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c3cc6a",
+   "id": "bc2c7098",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7be46b07",
+   "id": "289a5703",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f8f546e4",
+   "id": "0c5d0f05",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "569490fb",
+   "id": "4210b6bc",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "5949d8e1",
+   "id": "69069174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "eeab39f9",
+   "id": "c9a72672",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "62994de3",
+   "id": "a72b6490",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d2ea797a",
+   "id": "5122d5c5",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bbd68ea3",
+   "id": "fe31547a",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1cad6ca0",
+   "id": "98dc2133",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "78a857b8",
+   "id": "32878de5",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1cb2bf1",
+   "id": "702768b4",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4e46610b",
+   "id": "b5120753",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09b3fdc9",
+   "id": "dc21cf6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ffabb6ff",
+   "id": "eaa3887c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f8cfb4a0",
+   "id": "5c9d9e27",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "824490bd",
+   "id": "3363adf2",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "506e0fea",
+   "id": "5e112cc7",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0a6f05f4",
+   "id": "8725c305",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c207862",
+   "id": "c590eef9",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "35f64a94",
+   "id": "c51ff8d6",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96667a44",
+   "id": "3467e1a3",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0a10da5",
+   "id": "7d23e7db",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5706f918",
+   "id": "be1ac870",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0c69bf28",
+   "id": "7e61240a",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2487270d",
+   "id": "212ba404",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "057eaf32",
+   "id": "ed81e6b7",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b70907",
+   "id": "aab9bd73",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "25d8d393",
+   "id": "02c7e675",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "f040f602",
+   "id": "a0bd39b7",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7bc206df",
+   "id": "04e88eeb",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "5ce17633",
+   "id": "908892d4",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "167f38f1",
+   "id": "be0b0b47",
    "metadata": {},
    "source": [
     "# Beyond the standard library\n",
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "721a5cd4",
+   "id": "5c7fbe80",
    "metadata": {},
    "source": [
     "# Exercise: Colorize text\n",
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9245fb5",
+   "id": "434402c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5158d8b4",
+   "id": "1aa1a3a4",
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7bee71",
+   "id": "c8ee8316",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2547,12 +2547,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e60fe1d",
+   "cell_type": "markdown",
+   "id": "1ab95205",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next steps in improving your Python skills\n",
+    "\n",
+    "1. Use Python. Write code. Make mistakes.\n",
+    "    - Personal projects\n",
+    "    - Joining an open-source project\n",
+    "    - Using Python at work\n",
+    "    - Doing exercises\n",
+    "    - Taking a more serious/sophisticated course\n",
+    "2. Keep up with the latest in the Python world\n",
+    "    - Social media (LinkedIn and Twitter and Facebook) groups and/or hashtags\n",
+    "    - Newslettters "
+   ]
   }
  ],
  "metadata": {
