--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae5289a1",
+   "id": "732757f2",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6323ee80",
+   "id": "5525b5ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9070b0d6",
+   "id": "9bccfd32",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd4bdaa4",
+   "id": "35615da2",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "483d1b17",
+   "id": "67eda4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee18f82b",
+   "id": "bbf9b7e6",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99979920",
+   "id": "a9739224",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b1f166d",
+   "id": "e2dd740f",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51032c6a",
+   "id": "b7921f71",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22e9a51e",
+   "id": "ce0bc00c",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "149bba9b",
+   "id": "caf8f404",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675021fd",
+   "id": "ea5861b3",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "00490a86",
+   "id": "e16fc352",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9e6aa607",
+   "id": "b10f8a24",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b915d0b2",
+   "id": "86896d37",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e1eb865",
+   "id": "f370c37f",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eaccf48b",
+   "id": "459c6abe",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5ea32cd4",
+   "id": "10e52e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e1b8a043",
+   "id": "8d37fbf1",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05e0f5d8",
+   "id": "5a0cd016",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a6dc7908",
+   "id": "31ea31d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4d43f205",
+   "id": "ec44284b",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0296f485",
+   "id": "33b95f91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34724df",
+   "id": "316068be",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "092ce9cb",
+   "id": "e69db2c8",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7d6f7bc9",
+   "id": "8aedaebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "01fadd5f",
+   "id": "b18aac18",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "89b0b58c",
+   "id": "b6a3f050",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "483d1085",
+   "id": "da0ba0ca",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "85735f1e",
+   "id": "787b9dbb",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f46cfbd",
+   "id": "5f833e80",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "590bf5c8",
+   "id": "e96edd48",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2fbc3004",
+   "id": "8e63a5f8",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a4c25266",
+   "id": "53d09890",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c081db91",
+   "id": "a120b131",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5732efaf",
+   "id": "f0a691a2",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534d795c",
+   "id": "b05d72e5",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5decaabf",
+   "id": "78b8538d",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4d428125",
+   "id": "7f5e23c6",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "465749d1",
+   "id": "de774d50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "acd53531",
+   "id": "158fe4df",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6a4b08a7",
+   "id": "434eb121",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2c7098",
+   "id": "99c44eb6",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "289a5703",
+   "id": "09257616",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0c5d0f05",
+   "id": "d629756b",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4210b6bc",
+   "id": "16b4a77a",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "69069174",
+   "id": "ff8903a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "c9a72672",
+   "id": "66a7dd0a",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a72b6490",
+   "id": "62c8567d",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5122d5c5",
+   "id": "49125487",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fe31547a",
+   "id": "249c5a65",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "98dc2133",
+   "id": "095640b6",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "32878de5",
+   "id": "b32280cb",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "702768b4",
+   "id": "04ad3153",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b5120753",
+   "id": "f64a8ed8",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc21cf6b",
+   "id": "f5368a91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "eaa3887c",
+   "id": "ac590a0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "5c9d9e27",
+   "id": "b60af2a3",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3363adf2",
+   "id": "528ce704",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5e112cc7",
+   "id": "4d225d44",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8725c305",
+   "id": "25f4a21e",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c590eef9",
+   "id": "3b55166d",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c51ff8d6",
+   "id": "cc66948e",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3467e1a3",
+   "id": "8d74e04c",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d23e7db",
+   "id": "f5a46cfe",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "be1ac870",
+   "id": "619915bb",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7e61240a",
+   "id": "7f243931",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "212ba404",
+   "id": "67e76d81",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "ed81e6b7",
+   "id": "bd743d15",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab9bd73",
+   "id": "2f51e839",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "02c7e675",
+   "id": "397422b9",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a0bd39b7",
+   "id": "3132d3f7",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "04e88eeb",
+   "id": "e3b65303",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "908892d4",
+   "id": "f90cb72f",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be0b0b47",
+   "id": "08ccfd2c",
    "metadata": {},
    "source": [
     "# Beyond the standard library\n",
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c7fbe80",
+   "id": "74a2444f",
    "metadata": {},
    "source": [
     "# Exercise: Colorize text\n",
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "434402c9",
+   "id": "995f1e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1aa1a3a4",
+   "id": "d4e0eee7",
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ee8316",
+   "id": "e2aa605f",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab95205",
+   "id": "0937e2c8",
    "metadata": {},
    "source": [
     "# Next steps in improving your Python skills\n",
@@ -2561,7 +2561,24 @@
     "    - Taking a more serious/sophisticated course\n",
     "2. Keep up with the latest in the Python world\n",
     "    - Social media (LinkedIn and Twitter and Facebook) groups and/or hashtags\n",
-    "    - Newslettters "
+    "    - Newslettters \n",
+    "    - Conferences\n",
+    "3. Push yourself to learn more\n",
+    "    - Choose a direction (devops, data science, shell scripting), and use a lot to solve problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "777b7f37",
+   "metadata": {},
+   "source": [
+    "# \"No module\" potential fixes\n",
+    "\n",
+    "1. You might have installed it using a different version of Python than you're running programs with. A solution to this is to say\n",
+    "\n",
+    "    python3 -m pip install rich\n",
+    "    \n",
+    "    "
    ]
   }
  ],
